--- a/index.ipynb
+++ b/index.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -112,13 +112,13 @@
        "[6, 8, 13, 14, 16, 25]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(map(lambda x: x+5, ))"
+    "list(map(lambda x: x+5, numbers))"
    ]
   },
   {
