Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -215,7 +215,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "empt = []\n"
+   ]
   },
   {
    "cell_type": "markdown",
