--- a/index.ipynb
+++ b/index.ipynb
@@ -391,7 +391,7 @@
    ],
    "source": [
     "def map_format_restaurants(restaurants):\n",
-    "    b = list(map(lambda restaurant: format_restaurant, restaurants))\n",
+    "    b = list(map(lambda restaurant: format_restaurant(restaurant), restaurants))\n",
     "    return b\n",
     "print(map_format_restaurants(restaurants))"
    ]
